Fix alignment in leaderboard rank change

--- a/app/assets/stylesheets/users/leaderboard.scss
+++ b/app/assets/stylesheets/users/leaderboard.scss
@@ -53,6 +53,8 @@
 
 .leaderboard__rank-change {
   line-height: 1;
+  width: 22px;
+  margin-top: -0.25rem;
 }
 
 .leaderboard__rank-icon {
